--- a/Project1/style.css
+++ b/Project1/style.css
@@ -35,7 +35,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('./img/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');
+background-image: url('img/christine-roy-ir5MHI6rPg0-unsplash.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
