--- a/Project1/style.css
+++ b/Project1/style.css
@@ -188,7 +188,7 @@ pricing             */
     left: 0;
     width: 100%;
     height: 100%;
-   background-image: url('img/christine-roy-ir5MHI6rPg0-unsplash.jpg');
+background-image: url('../img/christine-roy-ir5MHI6rPg0-unsplash.jpg');
     background-size: cover;
     background-position: center;
     filter: blur(2px);
